quiz/quizParser.py
# Generated from C:/Users/melika/PycharmProjects/pythonProject1/quiz/quiz.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class quizParser ( Parser ):

    grammarFileName = "quiz.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'1'", "'2'", "'3'", "'4'", "'5'", "'6'", 
                     "'7'", "'8'", "'9'", "'0'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "WS" ]

    RULE_palindrome = 0
    RULE_entry = 1

    ruleNames =  [ "palindrome", "entry" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    WS=11

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class PalindromeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def entry(self):
            return self.getTypedRuleContext(quizParser.EntryContext,0)


        def EOF(self):
            return self.getToken(quizParser.EOF, 0)

        def getRuleIndex(self):
            return quizParser.RULE_palindrome

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPalindrome" ):
                listener.enterPalindrome(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPalindrome" ):
                listener.exitPalindrome(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPalindrome" ):
                return visitor.visitPalindrome(self)
            else:
                return visitor.visitChildren(self)




    def palindrome(self):

        localctx = quizParser.PalindromeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_palindrome)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 4
            self.entry()
            self.state = 5
            self.match(quizParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EntryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def entry(self):
            return self.getTypedRuleContext(quizParser.EntryContext,0)


        def getRuleIndex(self):
            return quizParser.RULE_entry

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntry" ):
                listener.enterEntry(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntry" ):
                listener.exitEntry(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEntry" ):
                return visitor.visitEntry(self)
            else:
                return visitor.visitChildren(self)




    def entry(self):

        localctx = quizParser.EntryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_entry)
        try:
            self.state = 58
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 7
                self.match(quizParser.T__0)
                self.state = 8
                self.entry()
                self.state = 9
                self.match(quizParser.T__0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 11
                self.match(quizParser.T__1)
                self.state = 12
                self.entry()
                self.state = 13
                self.match(quizParser.T__1)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 15
                self.match(quizParser.T__2)
                self.state = 16
                self.entry()
                self.state = 17
                self.match(quizParser.T__2)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 19
                self.match(quizParser.T__3)
                self.state = 20
                self.entry()
                self.state = 21
                self.match(quizParser.T__3)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 23
                self.match(quizParser.T__4)
                self.state = 24
                self.entry()
                self.state = 25
                self.match(quizParser.T__4)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 27
                self.match(quizParser.T__5)
                self.state = 28
                self.entry()
                self.state = 29
                self.match(quizParser.T__5)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 31
                self.match(quizParser.T__6)
                self.state = 32
                self.entry()
                self.state = 33
                self.match(quizParser.T__6)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 35
                self.match(quizParser.T__7)
                self.state = 36
                self.entry()
                self.state = 37
                self.match(quizParser.T__7)
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 39
                self.match(quizParser.T__8)
                self.state = 40
                self.entry()
                self.state = 41
                self.match(quizParser.T__8)
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 43
                self.match(quizParser.T__9)
                self.state = 44
                self.entry()
                self.state = 45
                self.match(quizParser.T__9)
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 47
                self.match(quizParser.T__0)
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 48
                self.match(quizParser.T__1)
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 49
                self.match(quizParser.T__2)
                pass

            elif la_ == 14:
                self.enterOuterAlt(localctx, 14)
                self.state = 50
                self.match(quizParser.T__3)
                pass

            elif la_ == 15:
                self.enterOuterAlt(localctx, 15)
                self.state = 51
                self.match(quizParser.T__4)
                pass

            elif la_ == 16:
                self.enterOuterAlt(localctx, 16)
                self.state = 52
                self.match(quizParser.T__5)
                pass

            elif la_ == 17:
                self.enterOuterAlt(localctx, 17)
                self.state = 53
                self.match(quizParser.T__6)
                pass

            elif la_ == 18:
                self.enterOuterAlt(localctx, 18)
                self.state = 54
                self.match(quizParser.T__7)
                pass

            elif la_ == 19:
                self.enterOuterAlt(localctx, 19)
                self.state = 55
                self.match(quizParser.T__8)
                pass

            elif la_ == 20:
                self.enterOuterAlt(localctx, 20)
                self.state = 56
                self.match(quizParser.T__9)
                pass

            elif la_ == 21:
                self.enterOuterAlt(localctx, 21)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





